--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,162 +1,173 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 #grilla {
-  display: grid;
-  grid-template-areas:
-    "header header header"
-    "historia noticias telescopio"
-    "footer footer footer";
-  grid-template-rows: 100px 1fr 75px;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-row-gap: 10px;
-  grid-column-gap: 10px;
-  height: 100vh;
-  margin: 0;
-}
-.border {
-  border: 1px solid lightgray;
-  border-radius: 8px;
-  font-family: Roboto;
-}
-
-header {
-  grid-area: header;
-}
-footer {
-  grid-area: footer;
-  padding-top: 20px;
-}
-section#historia {
-  grid-area: historia;
-  text-align: center;
-  /*background-image: url("../img/history.jpg");*/
-  background-image: linear-gradient(
-    to left,
-    rgb(244, 238, 238),
-    rgb(128, 128, 123)
-  );
-}
-section#noticias {
-  grid-area: noticias;
-  text-align: center;
-  background-image: url("../img/news.jpg");
-}
-nav {
-  grid-area: nav;
-}
-aside {
-  grid-area: telescopio;
-  text-align: center;
-  background-image: url("../img/jw.jpg");
-}
-
-h1 {
-  font-family: Roboto;
-  font-weight: bold;
-  font-style: normal;
-  font-size: xx-large;
-  font-stretch: extra-expanded;
-}
-
-a {
-  text-decoration: none;
-  color: black;
-}
-
-a:focus {
-  background-color: rgb(165, 161, 161);
-}
-
-h2 {
-  font-family: Roboto;
-  font-weight: bolder;
-  font-size: large;
-  justify-content: end;
-  /*animaciones al texto h2*/
-  animation-duration: 2s;
-  animation-name: showw;
-  animation-iteration-count: infinite;
-}
-
-@keyframes showw {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-
-}
-
-#grillaContenido {
-  display: grid;
-  grid-template-areas:
-    "header header header"
-    "nav historia historia"
-    "footer footer footer";
-  grid-template-rows: 100px 1fr 75px;
-  grid-template-columns: 1fr 4fr 1fr;
-  grid-row-gap: 10px;
-  grid-column-gap: 10px;
-  height: 100vh;
-  margin: 0;
-}
-
-p {
-  text-align: justify;
-  padding: 15px;
-}
-
-section#historiaContenido {
-  grid-area: historia;
-  text-align: center;
-}
-
-nav ul {
-  list-style: none;
-}
-
-@media screen and (max-width: 768px) {
-  #grillaContenido {
     display: grid;
     grid-template-areas:
       "header header header"
-      "nav nav nav"
-      "historia historia historia"
+      "historia noticias telescopio"
       "footer footer footer";
-    grid-template-rows: 100px 50px 1fr 75px;
-    grid-template-columns: 1fr 4fr 1fr;
-    grid-row-gap: 10px;
-    grid-column-gap: 10px;
-    height: 100vh;
-    margin: 0;
-  }
-
-  nav ul {
-    list-style: none;
-    display: inline-flex;
-    margin: 0%;
-  }
-
-  nav ul li {
-    padding: 10px;
-  }
-
-  #grilla {
-    display: grid;
-    grid-template-areas:
-      "header header header"
-      "historia historia historia"
-      "noticias noticias noticias"
-      "telescopio telescopio telescopio"
-      "footer footer footer";
-    grid-template-rows: 100px 1fr 1fr 1fr 75px;
+    grid-template-rows: 100px 1fr 75px;
     grid-template-columns: 1fr 1fr 1fr;
     grid-row-gap: 10px;
     grid-column-gap: 10px;
     height: 100vh;
     margin: 0;
   }
+  .border {
+    border: 1px solid lightgray;
+    border-radius: 8px;
+    font-family: Roboto;
+  }
+  
+  header {
+    grid-area: header;
+  }
+  footer {
+    grid-area: footer;
+    padding-top: 20px;
+  }
+  section#historia {
+    grid-area: historia;
+    text-align: center;
+    /*background-image: url("../img/history.jpg");*/
+    background-image: linear-gradient(
+      to left,
+      rgb(244, 238, 238),
+      rgb(128, 128, 123)
+    );
+  }
+  section#noticias {
+    grid-area: noticias;
+    text-align: center;
+    background-image: url("../img/news.jpg");
+  }
+  nav {
+    grid-area: nav;
+  }
+  aside {
+    grid-area: telescopio;
+    text-align: center;
+    background-image: url("../img/jw.jpg");
+  }
+  
+  h1 {
+    font-family: Roboto;
+    font-weight: bold;
+    font-style: normal;
+    font-size: xx-large;
+    font-stretch: extra-expanded;
+  }
+  
+  a {
+    text-decoration: none;
+    color: black;
+    font-size: smaller;
+  }
+  
+  a:focus {
+    background-color: rgb(165, 161, 161);
+  }
+  
+  h2 {
+    font-family: Roboto;
+    font-weight: bolder;
+    font-size: large;
+    justify-content: end;
+    /*animaciones al texto h2*/
+    animation-duration: 2s;
+    animation-name: showw;
+    animation-iteration-count: infinite;
+  }
+  
+  @keyframes showw {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  
+  }
+  
+  #grillaContenido {
+    display: grid;
+    grid-template-areas:
+      "header header header"
+      "nav historia historia"
+      "footer footer footer";
+    grid-template-rows: 100px 1fr 75px;
+    grid-template-columns: 1fr 4fr 1fr;
+    grid-row-gap: 10px;
+    grid-column-gap: 10px;
+    height: 100vh;
+    margin: 0;
+  }
+  
+  p {
+    text-align: justify;
+    padding: 15px;
+  }
+  
+  section#historiaContenido {
+    grid-area: historia;
+    text-align: center;
+  }
+  
+  nav ul {
+    list-style: none;
+  }
+  
+  @media screen and (max-width: 768px) {
+    #grillaContenido {
+      display: grid;
+      grid-template-areas:
+        "header header header"
+        "nav nav nav"
+        "historia historia historia"
+        "footer footer footer";
+      grid-template-rows: 100px 50px 1fr 75px;
+      grid-template-columns: 1fr 4fr 1fr;
+      grid-row-gap: 10px;
+      grid-column-gap: 10px;
+      height: 100vh;
+      margin: 0;
+    }
+  
+    nav ul {
+      list-style: none;
+      display: inline-flex;
+      margin: 0%;
+    }
+  
+    nav ul li {
+      padding: 10px;
+    }
+  
+    #grilla {
+      display: grid;
+      grid-template-areas:
+        "header header header"
+        "historia historia historia"
+        "noticias noticias noticias"
+        "telescopio telescopio telescopio"
+        "footer footer footer";
+      grid-template-rows: 100px 1fr 1fr 1fr 75px;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-row-gap: 10px;
+      grid-column-gap: 10px;
+      height: 100vh;
+      margin: 0;
+    }
+  }
+  
+img{
+  align-self: auto;
+  padding: 2px;
 }
 
-main {
-  background-image: url(..//img/geometry.jpg);
-}
+  
